--- a/MyFirstApp/app/src/main/res/layout/activity_login.xml
+++ b/MyFirstApp/app/src/main/res/layout/activity_login.xml
@@ -26,10 +26,23 @@
         android:layout_height="wrap_content"
         android:text="Button" />
 
+
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <EditText
+        android:id="@+id/input1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="User Name"
+/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:orientation="horizontal">
+
+
+    </LinearLayout>
 </LinearLayout>
